[package]
name = "jarvis"
version = "0.1.0"
edition = "2024"
description = "A minimal, secure coding agent CLI in Rust"

[dependencies]
axum = "0.8.4"
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "stream"] }
toml = "1.1.0"
futures-util = "0.3"
dirs = "6"

[dev-dependencies]
tempfile = "3"
tower = "0.5"
http-body-util = "0.1"
