[package]
name = "topcoat-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.53.1", features = ["rt-multi-thread", "macros"] }
topcoat = { version = "0.4.0", features = ["font-fontsource", "icon-iconify", "tailwind", "ui"] }

[build-dependencies]
topcoat = { version = "0.4.0", default-features = false, features = ["icon-iconify", "tailwind"] }
