[package]
name = "netamos-web-topcoat"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
topcoat = { version = "0.4.0", features = ["font-fontsource", "icon-iconify", "tailwind", "ui"] }

[build-dependencies]
topcoat = { version = "0.4.0", default-features = false, features = ["icon-iconify", "tailwind"] }
